notes for intro

--- a/TeX/paper/soc_ext_bibliography.bib
+++ b/TeX/paper/soc_ext_bibliography.bib
@@ -1,13 +1,5 @@
-%% This BibTeX bibliography file was created using BibDesk.
-%% http://bibdesk.sourceforge.net/
+% Encoding: UTF-8
 
-%% Created for Marc Fabel at 2020-08-02 20:06:00 +0200 
-
-
-%% Saved with string encoding Unicode (UTF-8) 
-
-
-@comment{jabref-meta: databaseType:bibtex;}
 
 
 
@@ -219,3 +211,15 @@
 	Journal = {mimeo},
 	Title = {{Noise Pollution and Violent Crime}},
 	Year = {2019}}
+
+@Book{bandura2007social,
+  title     = {{Social learning theory of aggression}},
+  publisher = {{In J. F. Knutston (Ed.), The control of aggression: Implications from basic research (pp.201--252). New Brunswick, NJ: Transaction Publishers}},
+  year      = {2007},
+  author    = {Bandura, A.},
+  editor    = {Knutston, J. F.},
+  chapter   = {Social learning theory of aggression},
+  pages     = {201--252},
+}
+
+@Comment{jabref-meta: databaseType:bibtex;}
