add: notes intro

--- a/TeX/paper/soc_ext_bibliography.bib
+++ b/TeX/paper/soc_ext_bibliography.bib
@@ -222,4 +222,22 @@
   pages     = {201--252},
 }
 
+@Article{branscombe1992role,
+  author    = {Branscombe, Nyla R and Wann, Daniel L},
+  title     = {{Role of Identification with a Group, Arousal, Categorization Processes, and Self-Esteem in Sports Spectator Aggression}},
+  journal   = {{Human Relations}},
+  year      = {1992},
+  volume    = {45},
+  number    = {10},
+  pages     = {1013--1033},
+  publisher = {Sage Publications Sage CA: Thousand Oaks, CA},
+}
+
+@Book{baron1977human,
+  title     = {{Human Aggression}},
+  publisher = {New York: Plenum Press},
+  year      = {1977},
+  author    = {Baron, R.},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
