--- a/TeX/paper/soc_ext_paper.tex
+++ b/TeX/paper/soc_ext_paper.tex
@@ -202,6 +202,7 @@ labelfont={bf}
 football is synonymous with soccer 
 
 % introductory paragraph
+violent fan behavior pervasive aspect 
 - legal dispute between federal states and DFL about reimbursement of costs for high risk games
 	* develop idea of external cost
 
@@ -251,11 +252,18 @@ estimation: negative binomial regression model, with holiday FE, DOW, month, yea
 results: assaults, vandalism, arrests for disorderly conduct and alcohol-related offenses increase in hosting municipalities on game days, the most sizable effect are associated with upsets (when worse teams win over better teams), no effects for away games
 
 
-\cite{lindo2018college}
+\cite{lindo2018college} -> build upon identification strategy
 topic: effect of college party culture surrounding Division 1 football games on sexual assaults
 results: daily reports of rape victimization among 17-24-year-old women increase by 28 percent, home games: 41 percent, away games 15 percent, larger effect for prominent games and for teams playing in the better ranked subdivision of Division 1, game outcome matters: upset wins increase rape particularly strong
 data: NIBRS plus self-collected data on football games -> panel: agency-by-day level
 emprical approach: within law eforcement agency over time, poisson model, with agency, DOW, holidaz and year FE
+
+
+\cite{card2011family}
+topic: impact of emotionally unsettling events associated with wins and losses of professional football teams on family violence, 
+result: upset losses (when the home team was expected to win) lead to an increase of intimate partner violence by 10 percent, no effect for upset wins or when the game expectations are too close (suggests asymmetry of gain-loss utility function), results pronounced around the end of the game, game importance: the more prominent the higher the effects
+data: merge police reports from the NIBRS with Sunday NFL games over twelve years
+
 
 
 
@@ -293,11 +301,13 @@ Bundesliga is an independent body , sperated from the German Football Associatio
 	* mechanical effect
 	* increase social contact and change how the interactions take place (in particular for smaller municipalities which attract thousands of spectators) \cite{lindo2018college}. Bundesliga has highest average attendance per match across all European main football leagues\citep{wicker2017effect}: 42,700 per match in 2018/19.
 
-- theories on spectator violence
-
-- mechanisms from psychology literature to explain aggressive, or even violent fan behavior
-	* frustration-aggression hypothesis \cite{dollard1939frustration}: aggressive fan behavior in the event of defeat of the favorite team (see results found by \cite{card2011family})
-	* social learning \cite{bandura1973aggression,bandura2007social}: independent of the outcome of the game, observation of the game enough to unleash violent actions. 
+- theories on spectator violence: 
+\cite{branscombe1992role}
+	
+		* Instinctual theories of aggression: human aggression genetically based, inevitable predisposition \cite{baron1977human}
+		* frustration-aggression hypothesis \cite{dollard1939frustration}:  in the event of defeat of the favorite team precipitates aggressive fan behavior (see results found by \cite{card2011family})
+		* social learning \cite{bandura1973aggression,bandura2007social}: independent of the outcome of the game, observation of the game enough to unleash violent actions. 
+		* 
 
 
 - role of alcohol
