add new sources

--- a/TeX/paper/soc_ext_bibliography.bib
+++ b/TeX/paper/soc_ext_bibliography.bib
@@ -1,7 +1,39 @@
-% Encoding: UTF-8
+%% This BibTeX bibliography file was created using BibDesk.
+%% http://bibdesk.sourceforge.net/
+
+%% Created for Marc Fabel at 2020-08-06 11:37:34 +0200 
+
+
+%% Saved with string encoding Unicode (UTF-8) 
+
+
+@comment{jabref-meta: databaseType:bibtex;}
 
 
 
+@article{kalist2016national,
+	Author = {Kalist, David E and Lee, Daniel Y},
+	Date-Added = {2020-08-06 11:37:19 +0200},
+	Date-Modified = {2020-08-06 11:37:34 +0200},
+	Journal = {{Journal of Sports Economics}},
+	Number = {8},
+	Pages = {863--882},
+	Publisher = {Sage Publications Sage CA: Los Angeles, CA},
+	Title = {The National Football League: Does crime increase on game day?},
+	Volume = {17},
+	Year = {2016}}
+
+@article{marie2016police,
+	Author = {Marie, Olivier},
+	Date-Added = {2020-08-06 08:13:18 +0200},
+	Date-Modified = {2020-08-06 08:13:53 +0200},
+	Journal = {{Journal of the Royal Statistical Society. Series A: Statistics in Society}},
+	Number = {1},
+	Pages = {273--292},
+	Publisher = {Wiley on behalf of the Royal Statistical Society},
+	Title = {Police and thieves in the stadium: measuring the (multiple) effects of football matches on crime},
+	Volume = {179},
+	Year = {2016}}
 
 @article{feltes2010fussballgewalt,
 	Author = {Feltes, Thomas},
@@ -212,32 +244,27 @@
 	Title = {{Noise Pollution and Violent Crime}},
 	Year = {2019}}
 
-@Book{bandura2007social,
-  title     = {{Social learning theory of aggression}},
-  publisher = {{In J. F. Knutston (Ed.), The control of aggression: Implications from basic research (pp.201--252). New Brunswick, NJ: Transaction Publishers}},
-  year      = {2007},
-  author    = {Bandura, A.},
-  editor    = {Knutston, J. F.},
-  chapter   = {Social learning theory of aggression},
-  pages     = {201--252},
-}
+@book{bandura2007social,
+	Author = {Bandura, A.},
+	Chapter = {Social learning theory of aggression},
+	Editor = {Knutston, J. F.},
+	Pages = {201--252},
+	Publisher = {{In J. F. Knutston (Ed.), The control of aggression: Implications from basic research (pp.201--252). New Brunswick, NJ: Transaction Publishers}},
+	Title = {{Social learning theory of aggression}},
+	Year = {2007}}
 
-@Article{branscombe1992role,
-  author    = {Branscombe, Nyla R and Wann, Daniel L},
-  title     = {{Role of Identification with a Group, Arousal, Categorization Processes, and Self-Esteem in Sports Spectator Aggression}},
-  journal   = {{Human Relations}},
-  year      = {1992},
-  volume    = {45},
-  number    = {10},
-  pages     = {1013--1033},
-  publisher = {Sage Publications Sage CA: Thousand Oaks, CA},
-}
+@article{branscombe1992role,
+	Author = {Branscombe, Nyla R and Wann, Daniel L},
+	Journal = {{Human Relations}},
+	Number = {10},
+	Pages = {1013--1033},
+	Publisher = {Sage Publications Sage CA: Thousand Oaks, CA},
+	Title = {{Role of Identification with a Group, Arousal, Categorization Processes, and Self-Esteem in Sports Spectator Aggression}},
+	Volume = {45},
+	Year = {1992}}
 
-@Book{baron1977human,
-  title     = {{Human Aggression}},
-  publisher = {New York: Plenum Press},
-  year      = {1977},
-  author    = {Baron, R.},
-}
-
-@Comment{jabref-meta: databaseType:bibtex;}
+@book{baron1977human,
+	Author = {Baron, R.},
+	Publisher = {New York: Plenum Press},
+	Title = {{Human Aggression}},
+	Year = {1977}}
