intro: draft literature

--- a/TeX/paper/soc_ext_paper.tex
+++ b/TeX/paper/soc_ext_paper.tex
@@ -208,11 +208,19 @@ violent fan behavior pervasive aspect
 
 - simultaneously very prominent industry w/ large revenues and attendance rates
 
+"Therefore, this paper not only focuses on an event, a football match, where social
+interactions (due to agglomeration and/or emotion) can be seen to be prominent, but
+also deals with an issue that lies at the core of the discussion of the future of cities in
+developed countries; that is, the location of large-scale events in central cities that bring
+prosperity but also temporary increases in contagion, congestion and crime" from MPS(2018)
+
+
 % soccer games and strategy how to estimate causal effect
-I undertake an indepth examination of the effects of public mass events on criminal behavior, more specifically the impact of soccer games of the first three leagues of the German football league systems is investigated.
-
-
+The aim of this paper is to undertake an in-depth examination of the effects that public mass exert on criminal behavior. More specifically, the impact of soccer games of the first three leagues of the German football league systems is investigated.
+My results allow me to characterize in full the impact of football matches on criminal behavior in the top three divisions of German professional soccer.
+data: panel data set (daily and municipality information)
 I compare the level of assaults on days with and without home games while controlling for any potential source of heterogeneity across days of the week, month, and year, holidays, ... Can I use that?
+
 
 % data and findings
 
@@ -225,17 +233,13 @@ I compare the level of assaults on days with and without home games while contro
 	* effects of soccer games explains x\% of assault reports
 	* annual social cost of x euros (number of add. assaults * estimated social cost)
 
+
 % Literature
-- relevant fields of literature
-	* College football 
-		-> criminal behavior \cite{rees2009college}
-		-> sexual assault \cite{lindo2018college}				-> build upon identification strategy
-		-> family violence \cite{card2011family}
-		
-	* soccer
-		-> how time shapes crime \cite{montolio2016time}
-		-> pick-pocketing and assaults \cite{montolio2019measuring}
-	
+This paper complements the literature on sport events and their effects on different dimensions of crime. Studies in the US American context often use offense reports from the National Incident Based Reporting System to investigate the impact of American (college) football games on crime. \cite{rees2009college} exploit within agency variation to study the effects of Division I-A college American football games on various offense categories for the years 2000-2005.\footnote{Almost all of the following studies exploit within law enforcement agency variation over time while controlling for weather, holidays and other sources of heterogeneity across time.} They find that assaults, vandalism, arrests for disorderly conduct and alcohol-related offenses increase in hosting municipalities on game days. More sizable effects are associated with upset game outcomes, defined as when lower ranked teams win over better ranked teams. The effects for away games are not significantly different from zero. \cite{lindo2018college} examine the effect of college party culture surrounding Division 1 American football games on sexual assaults. They show that the daily reports of rape victimization among 17-24-year-old women increase by 28 percent on games days. The effects are larger for home games, prominent matches and for teams playing in the better ranked subdivision of Division 1. Furthermore, they show that game outcomes matter: upset wins increase rape victimization strongly. \cite{card2011family} analyze the impact of emotionally unsettling events associated with wins and losses of professional American football teams on family violence for the years 1995-2006. They find an increase of intimate partner violence by ten percent in the event of upset losses (when the home team was expected to win). There are no effects for upset wins or when the game expectations are too close. This suggests an asymmetry of the gain-loss utility function. The effects of male-on-female intimate partner violence are pronounced around the end of the game and are larger for more prominent games. In the European context, researcher focus on football matches to estimate the effect of large scale sport events on crime. \cite{marie2016police} investigates the effect of football matches on crime in London using hourly offense data obtained from the  Metropolitan Crime Statistics System. His results show that property crimes increase (fall) by 4 percent (3 percent) for every extra 10,000 spectators attending a home (away) game. Violent crimes are only affected by derby matches. \cite{montolio2016time} study the temporal impact of football matches in Barcelona on criminal behavior. They match reports on registered crime in the city of Barcelona (2007-2011) with footballl matches played by the Football Club Barcelona (FCB) to see whether the games displace criminal activities temporally. They exploit a panel approach in which they compare crime for the same time window on the same weekday, with and without FCB games. Their results indicate temporal displacements for criminal activities of thefts, criminal damage, robberies and gender violence. Moreover, instances of gender violence increase after home defeats. In a follow-up study \cite{montolio2019measuring} investigate the spatial dimensions of the crime externalities stemming from football games. By drawing on the geocoded crime data for the city of Barcelona they run exploratory spatial data analysis and spatial regressions at the census tract level. Their findings show increased levels of thefts (mainly pickpocketing) across the entire city in the event of a home game. The impact is larger for regions in close proximity to the stadium. During away games, by contrast, the number of thefts around the stadium are relatively smaller. The effects of soccer matches on assaults are analogously to thefts. In particular, they find a displacement effect of violent fans to areas close to the stadium on days with home matches.
+%\footnote{In addition to the papers presented in this section, other noteworthy studies in that strand of research are: \cite{kalist2016national}.}
+
+
+
 	
 	
 % extension literature
@@ -243,24 +247,18 @@ I compare the level of assaults on days with and without home games while contro
 - heterogeneity in many dimensions
 - channels (not so much emotional cues, but people want to escalate during specific games)
 
+
 % roadmap
 
 
 
 
-% literature: 
-\newpage
-This paper complements the literature on sport events and their effects on different dimensions of crime.\footnote{In addition to the papers presented in this section, other noteworthy studies in that strand of research are: \cite{montolio2019measuring} and \cite{kalist2016national}.} Studies in the US American context often use offense reports from the National Incident Based Reporting System to investigate the impact of American (college) football games on crime. \cite{rees2009college} exploit within agency variation to study the effects of Division I-A college American football games on various offense categories for the years 2000-2005.\footnote{Almost all of the following studies exploit within law enforcement agency variation over time while controlling for weather, holidays and other sources of heterogeneity across time.} They find that assaults, vandalism, arrests for disorderly conduct and alcohol-related offenses increase in hosting municipalities on game days. More sizable effects are associated with upset game outcomes, defined as when lower ranked teams win over better ranked teams. The effects for away games are not significantly different from zero. \cite{lindo2018college} examine the effect of college party culture surrounding Division 1 American football games on sexual assaults. They show that the daily reports of rape victimization among 17-24-year-old women increase by 28 percent on games days. The effects are larger for home games, prominent matches and for teams playing in the better ranked subdivision of Division 1. Furthermore, they show that game outcomes matter: upset wins increase rape victimization strongly. \cite{card2011family} analyze the impact of emotionally unsettling events associated with wins and losses of professional American football teams on family violence for the years 1995-2006. They find an increase of intimate partner violence by ten percent in the event of upset losses (when the home team was expected to win). There are no effects for upset wins or when the game expectations are too close. This suggests an asymmetry of the gain-loss utility function. The effects of male-on-female intimate partner violence are pronounced around the end of the game and are larger for more prominent games.
-
-In the European context, researcher focus on football matches to estimate the effect of large scale sport events on crime. \cite{marie2016police} investigates the effect of football matches on crime in London using hourly offense data obtained from the  Metropolitan Crime Statistics System. His results show that property crimes increase (fall) by 4 percent (3 percent) for every extra 10,000 spectators attending a home (away) game. Violent crimes are only affected by derby matches. \cite{montolio2016time} study the temporal impact of football matches in Barcelona on criminal behavior. They match reports on registered crime in the city of Barcelona (2007-2011) with footballl matches played by the Football Club Barcelona (FCB) to see whether the games displace criminal activities temporally. They exploit a panel approach in which they compare crime for the same time window on the same weekday, with and without FCB games. Their results indicate temporal displacements for criminal activities of thefts, criminal damage, robberies and gender violence. Moreover, instances of gender violence increase after home defeats.
 
 
 
 
-\newpage
 
-% MISSING: AND ADJUSTfootnote in the beginning of the section
-\cite{montolio2019measuring}
+
 
 
 
@@ -294,11 +292,14 @@ Bundesliga is an independent body , separated from the German Football Associati
 
 \subsection{Soccer and Violent Crime}
 
-- mass events: 
-	* mechanical effect
-	* increase social contact and change how the interactions take place (in particular for smaller municipalities which attract thousands of spectators) \cite{lindo2018college}. Bundesliga has highest average attendance per match across all European main football leagues\citep{wicker2017effect}: 42,700 per match in 2018/19.
 
 - theories on spectator violence: 
+
+\footnote{Only consider theories of why the rate of violence in increasing. There could be also the case of a decreasing assault rate due to soccer games. This could happen as an `self-incapacitation effect' due to the attendance of the match for individuals with a greater propensity to act violently as shown by \cite{dahl2009movie} for violent movies. Yet, only hourly data can reveal the presence of the `self-incapacitation effect'.}
+
+		* mass events: 
+			- mechanical effect
+			- increase social contact and change how the interactions take place (in particular for smaller municipalities which attract thousands of spectators) \cite{lindo2018college}. Bundesliga has highest average attendance per match across all European main football leagues\citep{wicker2017effect}: 42,700 per match in 2018/19.
 		* Instinctual theories of aggression: human aggression genetically based, inevitable predisposition \cite{baron1977human}
 		* physiological arousal \cite{branscombe1992role}
 		* frustration-aggression hypothesis \cite{dollard1939frustration}:  in the event of defeat of the favorite team precipitates aggressive fan behavior (see results found by \cite{card2011family})
@@ -317,6 +318,9 @@ Bundesliga is an independent body , separated from the German Football Associati
 - hooligans: fascination of violence
 	\cite{zis14_15} \cite{feltes2010fussballgewalt}
 	Ultras feel challenged simply by the presence of police officers
+	
+	\cite{poutvaara2009police}: impact of counter-hooliganism policy in the Swedish context
+	
 
 - coming back to overarching theme of who pays for that
 	
@@ -534,10 +538,9 @@ Due to the nonlinearity of the model, the coefficient in Table \ref{tab_soc_ext:
 {\color{red}\textbf{TO DO (decreasing priority)}}
 \begin{itemize}
 	\item ML application
-	\item type of charge (place in paragraph about crime characteristics - see Timo's paper): broadly defined assault, property crimes (use as placebo outcome), other violence, obstructing law enforcement, threats
-	\item break it down to hour windows: before, during, and after the game
+	\item break it down to hour windows: before, during, and after the game - do I see a incapacitation effect as Dahl and Della Vigna (2009)
 	\item different specification of what are the affected regions, vary radius around stadium which region is affected: at first use only region (gemeinde/Kreis) in which the stadium is located, then play around with radius.
-	\item placebo games and placebo outcomes (any type that is not affected)?
+	\item placebo outcomes (any type that is not affected)?
 	\item control for mass events (see BHR paper)
 \end{itemize}
 
